[workspace]
members = [
  "analyzer",
  "catalog",
  "flow-rs",
  "parser",
  "peer-bigquery",
  "peer-cursor",
  "peer-mysql",
  "peer-postgres",
  "peer-snowflake",
  "postgres-connection",
  "pt",
  "query-router",
  "server",
  "value",
]

resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "std",
] }
dashmap = "6"
rust_decimal = { version = "1", default-features = false, features = [
  "tokio-pg",
] }
ssh2 = "0.9"
parser = { path = "./parser" }
sqlparser = { version = "0.61", features = ["visitor"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
pgwire = { version = "0.36", default-features = false, features = ["server-api-aws-lc-rs", "pg-type-chrono"] }
