[tool.poetry]
name = "dagster-peerdb"
version = "0.1.0"
description = ""
authors = ["Kaushik Iska <iska.kaushik@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_peerdb"}]

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
