[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
catalog = { path = "../catalog" }
flow-rs = { path = "../flow-rs" }
pem = "3.0"
pt = { path = "../pt" }
sqlparser.workspace = true
serde_json = "1.0"
