[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono.workspace = true
prost = "0.12"
peer-cursor = { path = "../peer-cursor" }
peer-postgres = { path = "../peer-postgres" }
pgwire.workspace = true
pt = { path = "../pt" }
refinery = { version = "0.8", features = ["tokio-postgres"] }
serde_json = "1.0"
sqlparser.workspace = true
tokio = { version = "1.13.0", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tracing = "0.1.29"
postgres-connection = { path = "../postgres-connection" }
