[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chrono.workspace = true
peer-cursor = { path = "../peer-cursor" }
peer-postgres = { path = "../peer-postgres" }
pgwire.workspace = true
pt = { path = "../pt" }
refinery = { version = "0.8", default-features = false, features = ["tokio-postgres"] }
serde_json = "1.0"
sqlparser.workspace = true
tokio = { version = "1.13.0", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tracing.workspace = true
postgres-connection = { path = "../postgres-connection" }
