[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "1.5.5"
aws-sdk-kms = "1.40.0"
async-trait = "0.1"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
chrono.workspace = true
peer-cursor = { path = "../peer-cursor" }
peer-postgres = { path = "../peer-postgres" }
pgwire.workspace = true
pt = { path = "../pt" }
refinery = { version = "0.8", default-features = false, features = ["tokio-postgres"] }
serde_json = "1.0"
sqlparser.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.6", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tracing.workspace = true
postgres-connection = { path = "../postgres-connection" }
