[package]
name = "flow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "native-tls-vendored",
] }
anyhow = "1.0"
tracing = "0.1"
tonic = "0.10"
tonic-health = "0.10"
pt = { path = "../pt" }
catalog = { path = "../catalog" }
