[package]
name = "peerdb-parser"
version = "0.1.0"
edition = "2021"
authors = ["PeerDB <copyright@peerdb.io>"]

[dependencies]
analyzer = { path = "../analyzer" }
anyhow = "1"
async-trait = "0.1"
catalog = { path = "../catalog" }
futures = { version = "0.3.28", features = ["executor"] }
pgwire = "0.17"
pt = { path = "../pt" }
rand = "0.8"
sqlparser = { git = "https://github.com/peerdb-io/sqlparser-rs.git" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
