[package]
name = "peerdb-parser"
version = "0.1.0"
edition = "2021"
authors = ["PeerDB <copyright@peerdb.io>"]

[dependencies]
analyzer = { path = "../analyzer" }
anyhow = "1"
async-trait = "0.1"
catalog = { path = "../catalog" }
futures = { version = "0.3.28", features = ["executor"] }
pgwire.workspace = true
pt = { path = "../pt" }
rand = "0.8"
sqlparser.workspace = true
tokio.workspace = true
tracing.workspace = true
