[package]
name = "peer-bigquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
peer-cursor = { path = "../peer-cursor" }
pgerror = { path = "../pgerror" }
pgwire = "0.13"
pt = { path = "../pt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sqlparser = { path = "../sqlparser-rs" }
tokio = { version = "1.0", features = ["full"] }
gcp-bigquery-client = "0.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
value = { path = "../value" }
yup-oauth2 = "7"
