[package]
name = "peer-bigquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono.workspace = true
futures = { version = "0.3.28", features = ["executor"] }
peer-ast = { path = "../peer-ast" }
peer-cursor = { path = "../peer-cursor" }
peer-connections = { path = "../peer-connections" }
pgwire.workspace = true
pt = { path = "../pt" }
rust_decimal.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sqlparser.workspace = true
tracing.workspace = true
tokio.workspace = true
gcp-bigquery-client = "0.24"
uuid = { version = "1.0", features = ["serde", "v4"] }
value = { path = "../value" }
