[package]
name = "peer-connections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4" }
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tracing = "0.1"
uuid = { version = "1.0" }
