[package]
name = "peer-cursor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
pgerror = { path = "../pgerror" }
pgwire = "0.13"
sqlparser = { path = "../sqlparser-rs" }
tokio = { version = "1.0", features = ["full"] }
value = { path = "../value" }
