[package]
name = "peer-cursor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dashmap.workspace = true
futures = "0.3"
pgwire.workspace = true
sqlparser.workspace = true
tokio.workspace = true
tracing.workspace = true
value = { path = "../value" }
