[package]
name = "peer-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pt = { path = "../pt" }
sasl2-sys = { version = "0.1.20", features = ["vendored"] }
libz-sys = { version = "1.1.9", features = ["static"] }
[dependencies.rdkafka]
version     = "0.32.2"
features    = ["ssl-vendored", "sasl", "libz", "gssapi-vendored"]
