[package]
name = "peer-mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono.workspace = true
dashmap = "5.0"
futures = { version = "0.3.28", features = ["executor"] }
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust"] }
peer-cursor = { path = "../peer-cursor" }
peer-connections = { path = "../peer-connections" }
pgwire.workspace = true
pt = { path = "../pt" }
rust_decimal = { version = "1.30.0", features = [ "tokio-pg" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sqlparser.workspace = true
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
value = { path = "../value" }
