[package]
name = "peer-mysql"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono.workspace = true
futures = { version = "0.3.28", features = ["executor"] }
mysql_async = { version = "0.35", default-features = false, features = ["minimal-rust", "rust_decimal", "chrono", "rustls-tls", "aws-lc-rs"] }
peer-ast = { path = "../peer-ast" }
peer-cursor = { path = "../peer-cursor" }
peer-connections = { path = "../peer-connections" }
pgwire.workspace = true
pt = { path = "../pt" }
rust_decimal.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
value = { path = "../value" }
