[package]
name = "peer-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
rust_decimal = { version = "1.30.0", features = [ "tokio-pg" ] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
peer-cursor = { path = "../peer-cursor" }
peer-connections = { path = "../peer-connections" }
pgerror = { path = "../pgerror" }
pgwire = "0.15"
postgres-connection = { path = "../postgres-connection" }
pt = { path = "../pt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sqlparser = { path = "../sqlparser-rs" }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-0_8",
] }
tracing = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
value = { path = "../value" }
