[package]
name = "peer-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
chrono.workspace = true
futures = "0.3"
peer-cursor = { path = "../peer-cursor" }
peer-connections = { path = "../peer-connections" }
pgwire.workspace = true
postgres-connection = { path = "../postgres-connection" }
postgres-inet = "0.19.0"
pt = { path = "../pt" }
rust_decimal.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
ssh2.workspace = true
sqlparser.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.6", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
tracing.workspace = true
uuid = { version = "1.0", features = ["serde", "v4"] }
value = { path = "../value" }
