[package]
name = "peer-snowflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.0"
async-trait = "0.1.57"
base64 = "0.21"
catalog = { path = "../catalog" }
chrono.workspace = true
dashmap = "5.0"
futures = "0.3"
hex = "0.4"
jsonwebtoken = { version = "9.0", features = ["use_pem"] }
peer-cursor = { path = "../peer-cursor" }
pgwire.workspace = true
pt = { path = "../pt" }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "rustls-tls"] }
rsa = { version = "0.9.2", features = ["pem", "pkcs5"] }
secrecy = { version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlparser.workspace = true
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
ureq = { version = "2", features = ["json", "charset"] }
value = { path = "../value" }
