[package]
name = "postgres-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
pt = { path = "../pt" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
urlencoding = "2"
tokio-postgres = "0.7.2"
tokio-postgres-rustls = "0.13"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
