[package]
name = "postgres-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
pt = { path = "../pt" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
ssh2.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.2"
tokio-postgres-rustls = "0.13"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
tracing.workspace = true
urlencoding = "2"
