[package]
name = "pt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser.workspace = true
tonic = "0.13"
tonic-reflection = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
