[package]
name = "pt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser.workspace = true
tonic = "0.14"
pbjson = "0.8"
pbjson-types = "0.8"
