[package]
name = "peerdb-server"
version = "0.1.0"
edition = "2021"
authors = ["PeerDB <copyright@peerdb.io>"]

[package.metadata.deb]
revision = ""
systemd-units = { enable = true }
maintainer-scripts = "debian/"
depends = "$auto"
priority = "optional"
assets = [
  [
    "../target/x86_64-unknown-linux-musl/release/peerdb-server",
    "usr/bin/peerdb-server",
    "755",
  ]
]

[package.metadata.deb.variants.debug]
revision = ""
assets = [
  [
    "../target/x86_64-unknown-linux-musl/release/peerdb-server",
    "usr/bin/peerdb-server",
    "755",
  ]
]


[dependencies]
analyzer = { path = "../analyzer" }
anyhow = "1"
async-trait = "0.1"
bytes = "1.0"
catalog = { path = "../catalog" }
clap = { version = "4.0", features = ["derive", "env"] }
console-subscriber = "0.2"
dashmap = "5.0"
dotenvy = "0.15.7"
flow-rs = { path = "../flow-rs" }
futures = { version = "0.3.28", features = ["executor"] }
peer-bigquery = { path = "../peer-bigquery" }
peer-connections = { path = "../peer-connections" }
peer-cursor = { path = "../peer-cursor" }
peer-postgres = { path = "../peer-postgres" }
peer-snowflake = { path = "../peer-snowflake" }
peerdb-parser = { path = "../parser" }
pgwire = "0.19"
prost = "0.12"
pt = { path = "../pt" }
sqlparser = { git = "https://github.com/peerdb-io/sqlparser-rs.git", features = ["visitor"] }
serde_json = "1.0"
rand = "0.8"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
uuid = "1.0"
cargo-deb = "2.0"

[dev-dependencies]
postgres = "0.19.4"
sha256 = "1.0.3"
