[package]
name = "value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
