[package]
name = "value"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
rust_decimal = { version = "1.30.0", features = ["db-tokio-postgres"] }
bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres-inet = "0.19.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
pgwire = "0.19"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.5", features = ["array-impls"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
